Add basic auth to backend

--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
   "name": "signdocs",
+  "scripts": {
+    "postinstall": "webpack",
+    "webpack": "webpack --watch --mode=development"
+  },
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@reduxjs/toolkit": "^1.4.0",
+    "babel-loader": "^8.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
