--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "signdocs",
   "scripts": {
     "postinstall": "webpack",
-    "webpack": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development"
   },
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "webpack": "^4.44.1",
