--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,19 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-amazon:
-  service: <%= Rails.application.credentials.dig(:aws, :service) %>
+amazon_dev:
+  service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: <%= Rails.application.credentials.dig(:aws, :region) %>
-  bucket: <%= Rails.application.credentials.dig(:aws, :bucket) %>
+  bucket: <%= Rails.application.credentials.dig(:aws, :dev, :bucket) %>
+
+amazon_prod:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(:aws, :region) %>
+  bucket: <%= Rails.application.credentials.dig(:aws, :prod, :bucket) %>
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
