--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 
 /node_modules
 /yarn-error.log
+/app/assets/javascripts/bundle.js
+/app/assets/javascripts/bundle.js.map
 
 /public/assets
 .byebug_history
