--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "signdocs",
   "scripts": {
     "postinstall": "webpack",
-    "start": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development",
+    "commit": "git-cz",
+    "eslint": "eslint --fix frontend/"
   },
   "private": true,
   "dependencies": {
@@ -11,6 +13,7 @@
     "@babel/preset-react": "^7.10.4",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -21,8 +24,23 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.2.0"
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "babel-eslint": "^10.1.0",
+    "cz-conventional-changelog": "^3.2.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "prettier": "^2.0.5"
   },
   "config": {
     "commitizen": {
