--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@babel/preset-react": "^7.10.4",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "humanize-string": "^2.1.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -24,7 +26,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "zxcvbn": "^4.4.2"
   },
   "eslintConfig": {
     "extends": [
