--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "signdocs",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/philgresh/signdocs.git"
+  },
   "engines": {
     "node": "12.5.0",
     "npm": "6.9.0"
