--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,12 +14,21 @@ amazon_dev:
   region: <%= Rails.application.credentials.dig(:aws, :region) %>
   bucket: <%= Rails.application.credentials.dig(:aws, :dev, :bucket) %>
 
+# amazon_prod:
+#   service: S3
+#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   region: <%= Rails.application.credentials.dig(:aws, :region) %>
+#   bucket: <%= Rails.application.credentials.dig(:aws, :prod, :bucket) %>
 amazon_prod:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: <%= Rails.application.credentials.dig(:aws, :region) %>
-  bucket: <%= Rails.application.credentials.dig(:aws, :prod, :bucket) %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['AWS_REGION'] %>
+  bucket: <%= ENV['S3_BUCKET_NAME'] %>
+
+
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
