feat(createdoc): add CreateDoc functionality, with route, submission, and result callbacks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     // "no-named-as-default": ["off"],
     // "no-named-as-default-member": ["off"],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "max-len": [
       "warn",
       {
