--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "scripts": {
     "postinstall": "webpack",
-    "start": "webpack --watch --mode=development",
+    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js",
+    "watch": "webpack --watch --mode=development",
+    "start": "webpack-dev-server --open",
     "commit": "git-cz",
     "eslint": "eslint --fix frontend/",
-    "deploy": "eslint --fix frontend/ && git push heroku master"
+    "deploy": "eslint --fix frontend/ && git push heroku master",
+    "analyze": "source-map-explorer 'app/assets/javascripts/*.js'"
   },
   "private": true,
   "dependencies": {
@@ -54,6 +57,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -62,7 +66,12 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
-    "prettier": "^2.0.5"
+    "mini-css-extract-plugin": "^0.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^2.0.5",
+    "terser-webpack-plugin": "^4.1.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.2"
   },
   "config": {
     "commitizen": {
