feat(sigpad): get signature pad working

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "clsx": "^1.1.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "pdfkit": "^0.11.0",
@@ -38,6 +39,7 @@
     "react-pdf": "^4.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-signature-canvas": "^1.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
