--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ amazon_dev:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: <%= Rails.application.credentials.dig(:aws, :region) %>
+  region: <%= Rails.application.credentials.dig(:aws, :dev, :region) %>
   bucket: <%= Rails.application.credentials.dig(:aws, :dev, :bucket) %>
 
 # amazon_prod:
