--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-signature-canvas": "^1.0.3",
+    "react-svgmt": "^1.1.11",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
