--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "pdfkit": "^0.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "^4.2.0",
