--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "immer": "^7.0.8",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
