--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
+    "clsx": "^1.1.1",
     "immer": "^7.0.8",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
@@ -40,6 +41,7 @@
     "react-helmet": "^6.1.0",
     "react-pdf": "^4.2.0",
     "react-redux": "^7.2.1",
+    "react-resizable": "^1.10.1",
     "react-router-dom": "^5.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-svgmt": "^1.1.11",
