--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,5 @@ config/environments/*.local.yml
 
 # Ignore application configuration
 /config/application.yml
-*.envsendgrid.env
+*.env
+sendgrid.env
