--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,10 +24,7 @@
   },
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_"] }],
-    "no-unused-vars": [
-      "warn",
-      { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }
-    ],
+    "no-unused-variable": [true, { "ignore-pattern": "^_" }],
     "jsx-a11y/href-no-hash": ["off"],
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
