--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.15.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@reduxjs/toolkit": "^1.4.0",
@@ -39,6 +40,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-obfuscate": "^3.6.8",
     "react-pdf": "^4.2.0",
     "react-redux": "^7.2.1",
     "react-resizable": "^1.10.1",
