--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "commit": "git-cz",
     "eslint": "eslint --fix frontend/",
     "deploy": "eslint --fix frontend/ && git push heroku master",
-    "analyze": "source-map-explorer 'app/assets/javascripts/*.js'"
+    "analyze": "source-map-explorer 'app/assets/javascripts/*.js'",
+    "dev": "concurrently \"bundle exec rails s\" \"npm run watch\""
   },
   "private": true,
   "dependencies": {
@@ -70,6 +71,7 @@
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
