--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -86,6 +89,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "terser-webpack-plugin": "^4.1.0",
+    "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.2"
   },
