--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "eslint": "eslint --fix frontend/",
     "deploy": "eslint --fix frontend/ && git push heroku master",
     "analyze": "source-map-explorer 'app/assets/javascripts/*.js'",
-    "dev": "concurrently \"bundle exec rails s\" \"npm run watch\""
+    "dev": "concurrently \"bundle exec rails s\" \"npm run watch\"",
+    "tsc": "tsc frontend/*/*.ts"
   },
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -66,7 +66,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-typescript": "^7.12.1",
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -89,6 +92,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "terser-webpack-plugin": "^4.1.0",
+    "ts-loader": "^8.0.7",
     "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.2"
