--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/preset-typescript": "^7.12.1",
     "@types/node": "^14.14.2",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -91,9 +91,10 @@
     "mini-css-extract-plugin": "^0.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
+    "source-map-loader": "^1.1.2",
     "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.7",
-    "typescript": "^4.0.3",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.0.5",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.2"
   },
