--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "outDir": "./app/assets/javascripts/",
     "module": "CommonJS",
     "sourceMap": true,
-    "target": "es6",
+    "target": "es5",
     "jsx": "react",
     "declaration": true,
+    "allowJs": true
   },
   "include": ["frontend/**/*"],
   "exclude": [
